# wexpect

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  README.md  appveyor.yml  codecov.yml  dump_logs.py  requirements.txt  setup.cfg  setup.py  tox.ini  wexpect.py  wexpect.spec
.github/ISSUE_TEMPLATE/: bug_report.md
doc/source/: conf.py  examples.rst  history.rst  index.rst
doc/source/api/: console_reader.rst  host.rst  index.rst  spawn_classes.rst  wexpect_util.rst
examples/: README.md  cmd.py  cmd_wrapper.py  foo.py  hello_wexpect.py  python.py  termination.py
issues/: README.md  appveyor.py  bla.py  bla2.py  i03_wait_on_eof.py  i09_cmd_error.py  i09_confused_string.py  i09_py_sim_no_error.py  i09_py_sim_no_error2.py  i10_parent.py  i11_greek_parent.py  i11_greek_printer.py  i11_unicode_parent.py  i11_unicode_printer.py  i14_switch_back_error.py  i18_setecho_error.py  long_printer.py
tests/: PexpectTestCase.py  __init__.py  exit1.py  foo.py  lines_printer.py  long_printer.py  needs_kill.py  parametric_printer.py  pyinstaller_test.py  test_command_list_split.py  test_console_reader.py  test_constructor.py  test_delay.py  test_destructor.py  test_echo.py  test_expect.py  test_interact.py  test_isalive.py  test_long.py  test_misc.py  test_misc_console_coverage.py  test_parametric_printer.py  test_parametric_printer_coverage.py  test_readline.py  test_run.py  test_timeout_pattern.py
wexpect/: __init__.py  __init__.py.orig  __main__.py  console_reader.py  host.py  legacy_wexpect.py  legacy_wexpect.py.orig  spawn.py  wexpect_util.py
