[metadata]
name            = wexpect
author          = Noah Spurrier, Richard Holden, Marco Molteni, Kimberley Burchett, Robert Stone, Hartmut Goebel, Chad Schroeder, Erick Tryzelaar, Dave Kirby, Ids vander Molen, George Todd, Noel Taylor, Nicolas D. Cesar, Alexander Gattin, Geoffrey Marshall, Francisco Lourenco, Glen Mabey, Karthik Gurusamy, Fernando Perez, Corey Minyard, Jon Cohen, Guillaume Chazarain, Andrew Ryan, Nick Craig-Wood, Andrew Stone, Jorgen Grahn, Benedek Racz
author-email    = betontalpfa@gmail.com
summary         = Windows alternative of pexpect
long-description-file = README.md
description-content-type = text/markdown
requires-python = >=3.4
project_urls =
    Source Code = https://github.com/raczben/wexpect
license = MIT
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Microsoft :: Windows  
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    scripting, automation, expect, pexpect, wexpect

[options.extras_require]
test =
    coverage
    tox
    setuptools>=38.0
    codecov
    twine
